[package]
name = "hartonomous-shader"
version = "1.0.0"
edition = "2021"
authors = ["Hartonomous Team"]

[[bin]]
name = "hartonomous-shader"
path = "src/main.rs"

[[bin]]
name = "shader-production"
path = "src/main_production.rs"

[dependencies]
blake3 = "1.5"
byteorder = "1.5"
safetensors = "0.4"
memmap2 = "0.9"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }

# Optional database connection (for testing)
postgres = { version = "0.19", features = ["with-serde_json-1"], optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "sdi_generation"
harness = false
